spacing fixed

--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -1,6 +1,6 @@
 #hero {
   min-height: 100vh;
-  height: 120vh;
+  height: 100vh;
   border-bottom: 0px;
   background: $dark-grey;
   font-weight: 400;
